Patch 0.2.4, início da implementação da seleção de personagens

--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -17,16 +17,9 @@ MulticastTimeToLive=1
 EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
+None=======
 
-<<<<<<< HEAD
-=======
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=True
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
 
->>>>>>> 29ead350198dc5f189a82f71217cea72f14bbbab
 
