--- a/Saved/Config/Windows/Editor.ini
+++ b/Saved/Config/Windows/Editor.ini
@@ -119,7 +119,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							"SizeCoefficient": 0.85000002384185791,\
 							"Type": "Stack",\
 							"HideTabWell": false,\
-							"ForegroundTab": "Sequencer",\
+							"ForegroundTab": "CompilerResults",\
 							"Tabs": [\
 								(\
 									"TabId": "Sequencer",\
@@ -191,7 +191,7 @@ WidgetBlueprintEditor_Graph_Layout_v1=(\
 											"SizeCoefficient": 1.2714241743087769,\
 											"Type": "Stack",\
 											"HideTabWell": false,\
-											"ForegroundTab": "Document : 4",\
+											"ForegroundTab": "Document : 2",\
 											"Tabs": [\
 												(\
 													"TabId": "Document",\
