Patch 0.2.4 post-cook-test

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -31,7 +31,7 @@ bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 ClientWindowWidth=640
 AutoConnectToServer=True
 RouteGamepadToSecondWindow=False
@@ -45,7 +45,7 @@ LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-BU05T8C
 LastExecutedLaunchName=DESKTOP-BU05T8C
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=-842150451,Y=-842150451)
-MultipleInstancePositions=(X=210,Y=321)
+MultipleInstancePositions=(X=367,Y=155)
 MultipleInstancePositions=(X=461,Y=190)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -628,16 +628,6 @@ ScrollBox.Navigation=True
 CleanShutdown=True
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/TED_Specific/Character_Assets/Proxy_Ted/Ted_BP-CHRED2-.Ted_BP-CHRED2-
-OpenAssetsAtExit=/Game/TED_Specific/Character_Assets/Proxy_Ted/Ted_BP-CH-.Ted_BP-CH-
-OpenAssetsAtExit=/Game/TED_Specific/Character_Assets/Player_Controller_BP.Player_Controller_BP
-OpenAssetsAtExit=/Game/TED_Specific/Multiplayer_Stuff/ThumbnailCharSelection.ThumbnailCharSelection
-OpenAssetsAtExit=/Game/TED_Specific/Character_Assets/Personagem_Generico_BP.Personagem_Generico_BP
-OpenAssetsAtExit=/Game/TED_Specific/Multiplayer_Stuff/GameInfo.GameInfo
-OpenAssetsAtExit=/Game/TED_Specific/Character_Assets/CharacterSelectionInfo.CharacterSelectionInfo
-OpenAssetsAtExit=/Game/TED_Specific/Multiplayer_Stuff/ScreenCharSelection.ScreenCharSelection
-OpenAssetsAtExit=/Game/TED_Specific/Multiplayer_Stuff/MainMenu.MainMenu
-OpenAssetsAtExit=/Game/TED_Specific/Multiplayer_Stuff/CreateSession.CreateSession
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -647,7 +637,7 @@ PreviewAspectRatio=16:9
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
 WindowSize=X=1300.000 Y=740.000
-WindowSize=X=1300.000 Y=740.000
+WindowSize=X=1310.000 Y=750.000
 None=======
 InitiallyMaximized=True
 
@@ -1181,6 +1171,8 @@ SequencerWidgets.TimeStamp=2016.11.20-17.58.39
 SequencerWidgets.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2016.11.20-17.56.32
 MaterialEditor.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2016.11.20-17.59.28
+UATHelper.LastCompileMethod=Unknown
 
 [AssetEditorToolkitTabLocation]
 /Game/TED_Specific/Multiplayer_Stuff/ServerList.ServerList=1
@@ -1189,6 +1181,7 @@ MaterialEditor.LastCompileMethod=Unknown
 /Game/TED_Specific/Character_Assets/Proxy_Ted/TedRedTestMTL.TedRedTestMTL=1
 /Game/TED_Specific/Character_Assets/Proxy_Ted/Ted_BP-CHRED2-.Ted_BP-CHRED2-=1
 /Game/TED_Specific/Multiplayer_Stuff/CharacterSelection.CharacterSelection=1
+/Game/TED_Specific/Multiplayer_Stuff/GameInfo.GameInfo=1
 
 [MessageLog]
 LastLogListing=PIE
