--- a/Saved/Config/Windows/Game.ini
+++ b/Saved/Config/Windows/Game.ini
@@ -1,4 +1,20 @@
 [StartupActions]
 bAddPacks=False
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+StagingDirectory=(Path="C:/Users/daviu/Documents/tested4")
+ForDistribution=False
+IncludeDebugFiles=False
+bNativizeBlueprintAssets=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path=)
+HttpChunkInstallDataVersion=
+ApplocalPrerequisitesDirectory=(Path=)
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bEncryptIniFiles=False
+bSkipEditorContent=False
+
 
